Fix interactive editor diff z-index to prevent overlapping the suggest widget (#183011)

--- a/src/vs/workbench/contrib/interactiveEditor/browser/interactiveEditor.css
+++ b/src/vs/workbench/contrib/interactiveEditor/browser/interactiveEditor.css
@@ -238,3 +238,8 @@
 .monaco-editor .interactive-editor-newfile-widget .title {
 	padding: 3px 0;
 }
+
+/* Temp fix for microsoft/vscode-internalbacklog#4152 to unblock demo */
+.monaco-editor .zone-widget:has(div.interactive-editor-diff-widget) {
+	z-index: 11 !important;
+}
